--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ragemp-pkg",
-  "version": "0.0.6",
+  "version": "1.0.0",
   "description": "Install RAGE:MP Binaries Quickly",
   "keywords": [
     "ragemp",
@@ -31,6 +31,7 @@
     "axios": "^1.10.0",
     "chalk": "^5.4.1",
     "esbuild": "^0.25.6",
+    "inquirer": "^12.9.6",
     "typescript": "^5.8.3"
   }
 }
